src/ui/tests/snapshots/vtabs_ui__snapshot_tests__tab_palette_filtered.snap
---
source: src/ui/src/../tests/snapshots.rs
expression: "snapshot(ui, frame)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "  󱂪                             󰒓   󰑐                                                                                   ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "  󰍉  Search...                                                                                                          ",
        "                                                                                                                        ",
        "  󰌨  Home                                                                                                               ",
        "                                                                                                                        ",
        "    ~/journal                                                                                                          ",
        "                                                                                                                        ",
        "  󰷏  Docs  2                                                                                                            ",
        "                              󰍉  e                                                                                      ",
        "      ~/guide                                                                                                          ",
        "                                                                                                                        ",
        "      ~/api                    ~/guide                                             zsh 2                              ",
        "                                                                                                                        ",
        "                                ~/dotfiles                                          zsh 5                              ",
        "  󰐕  New Tab                                                                                                            ",
        "                                Release notes                                       zsh 6                              ",
        "  󰒋  /api            /web                                                                                             ",
        "                      /logs    ~/elsewhere                                          Work                              ",
        "    ~/dotfiles                                                                                                         ",
        "                                                                                                                        ",
        "    Release notes                                                                                                      ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        " main ✓ 2 changes                                                                                                       ",
        "                                                                                                                        ",
        "  󰻃   󰻃   󰻃                         󰐕                                                                                   ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 1, y: 0, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 5, y: 0, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 31, y: 0, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 39, y: 0, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 1, y: 3, fg: Rgb(225, 231, 240), bg: Rgb(35, 44, 59), modifier: NONE,
        x: 2, y: 3, fg: Rgb(152, 168, 190), bg: Rgb(35, 44, 59), modifier: NONE,
        x: 38, y: 3, fg: Rgb(225, 231, 240), bg: Rgb(35, 44, 59), modifier: NONE,
        x: 39, y: 3, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 1, y: 4, fg: Rgb(225, 231, 240), bg: Rgb(35, 44, 59), modifier: NONE,
        x: 39, y: 4, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 2, y: 5, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 38, y: 5, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 9, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 9, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 10, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 29, y: 10, fg: Reset, bg: Rgb(35, 44, 59), modifier: NONE,
        x: 30, y: 10, fg: Rgb(152, 168, 190), bg: Rgb(35, 44, 59), modifier: NONE,
        x: 33, y: 10, fg: Rgb(225, 231, 240), bg: Rgb(35, 44, 59), modifier: NONE,
        x: 90, y: 10, fg: Reset, bg: Rgb(35, 44, 59), modifier: NONE,
        x: 91, y: 10, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 10, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 11, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 29, y: 11, fg: Reset, bg: Rgb(35, 44, 59), modifier: NONE,
        x: 91, y: 11, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 11, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 12, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 12, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 13, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 30, y: 13, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 85, y: 13, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 90, y: 13, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 13, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 14, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 14, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 15, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 29, y: 15, fg: Reset, bg: Rgb(52, 72, 95), modifier: NONE,
        x: 30, y: 15, fg: Rgb(232, 100, 100), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 33, y: 15, fg: Rgb(169, 199, 245), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 85, y: 15, fg: Rgb(152, 168, 190), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 90, y: 15, fg: Reset, bg: Rgb(52, 72, 95), modifier: NONE,
        x: 91, y: 15, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 15, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 2, y: 16, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 16, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 29, y: 16, fg: Reset, bg: Rgb(52, 72, 95), modifier: NONE,
        x: 91, y: 16, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 16, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 17, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 30, y: 17, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 85, y: 17, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 90, y: 17, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 17, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 1, y: 18, fg: Rgb(225, 231, 240), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 2, y: 18, fg: Rgb(255, 233, 168), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 5, y: 18, fg: Rgb(152, 168, 190), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 20, y: 18, fg: Rgb(225, 231, 240), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 22, y: 18, fg: Rgb(169, 199, 245), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 28, y: 18, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 18, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 1, y: 19, fg: Rgb(225, 231, 240), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 22, y: 19, fg: Rgb(255, 160, 94), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 23, y: 19, fg: Rgb(152, 168, 190), bg: Rgb(52, 72, 95), modifier: NONE,
        x: 28, y: 19, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 30, y: 19, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 86, y: 19, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 90, y: 19, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 19, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 2, y: 20, fg: Rgb(232, 100, 100), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 5, y: 20, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 20, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 20, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 21, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 21, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 22, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 22, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 23, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 23, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 24, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 24, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 25, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 25, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 26, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 26, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 27, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 27, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 28, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 28, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 28, y: 29, fg: Reset, bg: Rgb(25, 34, 49), modifier: NONE,
        x: 92, y: 29, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 1, y: 36, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 39, y: 36, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 1, y: 38, fg: Rgb(169, 199, 245), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 5, y: 38, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 13, y: 38, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 35, y: 38, fg: Rgb(152, 168, 190), bg: Rgb(25, 34, 49), modifier: NONE,
        x: 39, y: 38, fg: Rgb(225, 231, 240), bg: Rgb(25, 34, 49), modifier: NONE,
    ]
}
surfaces:
  RoundedSurface { rect: Rect { x: 1, y: 0, width: 4, height: 2 }, fill: Rgb(25, 34, 49), radius: 8.0, inset: 5.0, square: true, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 31, y: 0, width: 4, height: 2 }, fill: Rgb(25, 34, 49), radius: 8.0, inset: 5.0, square: true, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 35, y: 0, width: 4, height: 2 }, fill: Rgb(25, 34, 49), radius: 8.0, inset: 5.0, square: true, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 3, width: 38, height: 2 }, fill: Rgb(35, 44, 59), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 5, width: 38, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 7, width: 38, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 9, width: 38, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 11, width: 38, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 13, width: 38, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 16, width: 38, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 18, width: 38, height: 2 }, fill: Rgb(52, 72, 95), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 21, y: 18, width: 17, height: 2 }, fill: Rgb(52, 72, 95), radius: 0.0, inset: 6.0, square: false, scale_y: 1.0, stacked: true, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 20, width: 38, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 22, width: 38, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 1, y: 38, width: 4, height: 2 }, fill: Rgb(25, 34, 49), radius: 8.0, inset: 5.0, square: true, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 5, y: 38, width: 4, height: 2 }, fill: Rgb(25, 34, 49), radius: 8.0, inset: 5.0, square: true, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 9, y: 38, width: 4, height: 2 }, fill: Rgb(25, 34, 49), radius: 8.0, inset: 5.0, square: true, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 35, y: 38, width: 4, height: 2 }, fill: Rgb(25, 34, 49), radius: 8.0, inset: 5.0, square: true, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 28, y: 9, width: 64, height: 21 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 0.0, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 29, y: 10, width: 62, height: 2 }, fill: Rgb(35, 44, 59), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 29, y: 13, width: 62, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 29, y: 15, width: 62, height: 2 }, fill: Rgb(52, 72, 95), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 29, y: 17, width: 62, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
  RoundedSurface { rect: Rect { x: 29, y: 19, width: 62, height: 2 }, fill: Rgb(25, 34, 49), radius: 9.0, inset: 1.5, square: false, scale_y: 1.0, stacked: false, shift_y: 0.0 }
hits:
  Editor Rect { x: 29, y: 10, width: 62, height: 2 } ""
  Menu("tab/2") Rect { x: 29, y: 13, width: 62, height: 2 } ""
  Menu("tab/5") Rect { x: 29, y: 15, width: 62, height: 2 } ""
  Menu("tab/6") Rect { x: 29, y: 17, width: 62, height: 2 } ""
  Menu("tab/10") Rect { x: 29, y: 19, width: 62, height: 2 } ""
cursor: Some(Position { x: 34, y: 10 })
cursor_shift: 0.5
ime_rect: Some(Rect { x: 34, y: 10, width: 1, height: 1 })
transform: SurfaceTransform { translate_x: 0.0, opacity: 1.0 }
focused: None
modal: true overlay_surface: true content_page: false text_input: true
